# newwork

./: .gitignore  README.md
backend/: Cargo.toml
backend/scripts/: README.md  gen_password.rs
backend/src/: auth.rs  handlers.rs  main.rs  migrations.rs  models.rs  routes.rs  state.rs
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: AbsenceRequest.jsx  DataItems.jsx  EmployeeList.jsx  EmployeeProfile.jsx  Login.jsx
frontend/src/services/: api.js
